# ESP-adf-streamer

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  esp-adf-prototype-plan.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
install/: index.html  manifest.json
main/: CMakeLists.txt  Kconfig.projbuild  bt_manager.c  bt_manager.h  config_manager.c  config_manager.h  main.c  monitor.c  monitor.h  passthrough_el.c  passthrough_el.h  pipeline.c  pipeline.h  provisioning.c  provisioning.h  station_config.h  wifi_manager.c  wifi_manager.h
